kubernetes/minikube/app/book.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-deployment
  labels:
    app: book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
      - name: book
        image: book-service:0.0.1
        ports:
        - containerPort: 8080
        resources: {}
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness

---
apiVersion: v1
kind: Service
metadata:
  name: book-service
  labels:
    appsvc: book
spec:
  type: ClusterIP
  selector:
    app: book
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
