kubernetes/minikube/app/rating.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-deployment
  labels:
    app: rating
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating
  template:
    metadata:
      labels:
        app: rating
    spec:
      containers:
      - name: rating
        image: rating-service:0.0.1
        ports:
        - containerPort: 8080
        resources: {}
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness

---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
  labels:
    appsvc: rating
spec:
  type: ClusterIP
  selector:
    app: rating
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
