kubernetes/minikube/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-cloud-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/b(/|$)(.*)"
        backend:
          service:
            name: book-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/r(/|$)(.*)"
        backend:
          service:
            name: rating-service
            port:
              number: 8080
